07 also, basically done. Spacing issue persists, otherwise good

--- a/07/global.css
+++ b/07/global.css
@@ -1,2 +1,59 @@
-/*font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;*/
+body {
+  background-color: #323232;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #FFFFFF;
+  border-bottom: 5px solid #FFFFFF;
+}
+
+h1 {
+  background-color: #7F3A7D;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: #FFFFFF;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  padding: 20px;
+  border-bottom: 1px solid #CC6CC3;
+}
+
+#intro h2 {
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;  
+}
+
+#intro p {
+  font-size: 16px;
+  padding: 8px 20px 20px 20px;
+  border-left: 1px solid red;
+  border-bottom: 1px solid #FFFFFF;
+  margin: 0;
+}
+
+div.month {
+  border-bottom: 1px solid #FFFFFF;
+}
+
+div.month h3 {
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal, "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", sans serif;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 22px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  margin: 20px;
+}
+
+div.festival {
+  font-size: 14px;
+  margin: 20px;
+}
+
+div.festival a {
+  background-color: #000000;
+  color: #FFFFFF;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 2px;
+  margin-bottom: 10px;
+}
